# hestia

./: .gitignore  LICENSE  README.md
hestia-sat/: BEAGLEBONE.md  Cargo.toml  INSTALL.md  README.md  build.rs  hestia.py  package.sh  run-docker.sh  upload.sh  uts-programs.toml
hestia-sat/.cargo/: config.toml
hestia-sat/flight-programs/test1/: flight.toml  uts-tasks-flight.json
hestia-sat/flight-programs/test2/: matilda-test2-program1.toml  matilda-test2-program2.toml  matilda-test2-schedule.json
hestia-sat/flight-programs/test3/: matilda-test3-program1.toml  matilda-test3-program2.toml  matilda-test3-program3.toml  matilda-test3-program4.toml  matilda-test3-program5.toml  matilda-test3-program6.toml  matilda-test3-schedule.json
hestia-sat/flight-programs/test4/: matilda-test4-program1.toml  matilda-test4-program2.toml  matilda-test4-program3.toml  matilda-test4-program4.toml  matilda-test4-program5.toml  matilda-test4-program6.toml  matilda-test4-schedule.json
hestia-sat/flight-programs/test5/: matilda-test5-program1.toml  matilda-test5-program2.toml  matilda-test5-program3.toml  matilda-test5-program4.toml  matilda-test5-schedule.json
hestia-sat/flight-programs/test6/: matilda-test6-program1.toml  matilda-test6-program3.toml  matilda-test6-program4.toml  matilda-test6-schedule.json
hestia-sat/kubos/: flight.env  init.sh  uts-tasks-flight.json  uts-tasks-tvac1.json  uts-tasks-tvac2.json  uts_en.sh
hestia-sat/nginx/: uts-web-nginx.conf
hestia-sat/programs/: flight.toml  tvac1.toml  tvac2.toml
hestia-sat/src/: board.rs  config.rs  csv.rs  heater.rs  host.rs  i2c.rs  lib.rs  logger.rs  main.rs  msp430.rs  payload.rs  reading.rs  sensors.rs  zipper.rs
hestia-sat/systemd/: i2c-pin-config.service  uts-log-monitor.path  uts-log-monitor.service  uts-log.service  uts-monitor.service  uts-web-monitor.path  uts-web-monitor.service  uts-web-nginx.path  uts-web-nginx.service  uts-web.service
(+162 files in other folders)
