[package]
name = "uts-ws1"
version = "1.0.0"
edition = "2018"

[dependencies]
bincode = "1.0"
byteorder = "1.4.3"
failure = "0.1.2"
i2c-linux = "0.1.2"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serial = "0.4.0"
strum_macros = "0.24"
chrono = "0.4.24"
envy = "0.4.2"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
dotenv = "0.15.0"
actix-web = "4.3.1"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
serde_json = "1.0.96"
mime = "0.3.17"
